Improved validation and reduced duplication by using groups